<resources>
    <string name="app_name">Live chatter</string>
    <string name="mic">mic</string>
    <string name="message">message</string>
    <string name="video">video</string>
    <string name="theme">night</string>
    <string name="facebook">facebook</string>
    <string name="instagram">instagram</string>
    <string name="git">git</string>
    <string name="donate">donate</string>
    <string name="account">acc</string>
    <string name="welcome">Welcome</string>
    <string name="videoR">Video\nRoom</string>
    <string name="chatR">Chat\nRoom</string>
    <string name="vcR">VC\nRoom</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>