<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:hapticFeedbackEnabled="true"
    tools:context=".MainActivity"
    android:background="#E8F3FF">


    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:foregroundGravity="center"
        android:scrollbars="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.407"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.045">


        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#E8F3FF"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <FrameLayout
                android:layout_width="214dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="136dp"
                android:layout_marginLeft="180dp">


                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_marginStart="15dp"
                    android:layout_marginLeft="15dp"
                    android:contentDescription="@string/account"
                    android:scaleType="fitXY"
                    android:src="@drawable/images__3_" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="31dp"
                    android:layout_marginTop="90dp"
                    android:clickable="false"
                    android:fontFamily="sans-serif-condensed-medium"
                    android:text="Welcome"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textColor="#6063EE"
                    tools:ignore="TextSizeCheck" />

                <TextView
                    android:id="@+id/name1"
                    android:layout_width="80dp"
                    android:layout_height="31dp"
                    android:layout_marginStart="90dp"
                    android:layout_marginLeft="90dp"
                    android:layout_marginTop="90dp"
                    android:fontFamily="sans-serif-condensed-medium"

                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textColor="#6063EE" />

                <Button
                    android:id="@+id/buttonProfile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="100dp"
                    android:layout_marginLeft="100dp"
                    android:layout_marginTop="40dp"
                    android:background="#00FFFFFF"

                    android:text="Edit"
                    android:textColor="@color/black" />

            </FrameLayout>

            <FrameLayout
                android:id="@+id/frame"
                android:layout_width="404dp"
                android:layout_height="131dp"
                android:layout_marginStart="1dp"
                android:layout_marginLeft="1dp"
                android:layout_marginTop="1dp">

                <ImageButton
                    android:id="@+id/imageButton"
                    android:layout_width="68dp"
                    android:layout_height="68dp"
                    android:layout_marginStart="280dp"
                    android:layout_marginLeft="280dp"
                    android:layout_marginTop="0dp"
                    android:background="#00FFFFFF"
                    android:baselineAlignBottom="true"
                    android:contentDescription="@string/mic"
                    android:onClick="voiceOpen"
                    android:scaleType="fitXY"
                    app:srcCompat="@drawable/_314955"
                    tools:layout_editor_absoluteX="296dp"
                    tools:layout_editor_absoluteY="196dp" />

                <ImageButton
                    android:id="@+id/imageButton2"
                    android:layout_width="68dp"
                    android:layout_height="68dp"
                    android:layout_marginStart="170dp"
                    android:layout_marginLeft="170dp"
                    android:layout_marginTop="0dp"
                    android:background="#00FFFFFF"
                    android:baselineAlignBottom="true"
                    android:contentDescription="@string/message"
                    android:onClick="msgOpen"
                    android:scaleType="fitXY"
                    app:srcCompat="@drawable/download"
                    tools:layout_editor_absoluteX="182dp"
                    tools:layout_editor_absoluteY="196dp" />

                <ImageButton
                    android:id="@+id/imageButton3"
                    android:layout_width="68dp"
                    android:layout_height="68dp"
                    android:layout_marginStart="60dp"
                    android:layout_marginLeft="60dp"
                    android:layout_marginTop="0dp"
                    android:background="#00FFFFFF"
                    android:baselineAlignBottom="true"
                    android:contentDescription="@string/video"
                    android:onClick="videoOpen"
                    android:scaleType="fitXY"
                    app:srcCompat="@drawable/images"
                    tools:ignore="ImageContrastCheck"
                    tools:layout_editor_absoluteX="62dp"
                    tools:layout_editor_absoluteY="196dp" />

                <TextView
                    android:id="@+id/imageView2"
                    android:layout_width="67dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="60dp"
                    android:layout_marginLeft="60dp"
                    android:layout_marginTop="80dp"
                    android:gravity="center"
                    android:onClick="videoOpen"
                    android:text="@string/videoR"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    tools:ignore="TouchTargetSizeCheck" />

                <TextView
                    android:id="@+id/imageView3"
                    android:layout_width="67dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="170dp"
                    android:layout_marginLeft="170dp"
                    android:layout_marginTop="80dp"
                    android:gravity="center"
                    android:onClick="msgOpen"
                    android:text="@string/chatR"
                    android:textSize="18sp"
                    android:textStyle="bold"

                    tools:ignore="TouchTargetSizeCheck" />

                <TextView
                    android:id="@+id/imageView4"
                    android:layout_width="67dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="280dp"
                    android:layout_marginLeft="280dp"
                    android:layout_marginTop="80dp"
                    android:gravity="center"
                    android:onClick="voiceOpen"
                    android:text="@string/vcR"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    tools:ignore="TouchTargetSizeCheck" />

            </FrameLayout>

            <!-- <FrameLayout
                android:layout_width="227dp"
                android:layout_height="226dp"
                android:layout_marginTop="40dp"
                android:layout_marginBottom="52dp"
                tools:ignore="TextSizeCheck">

                <TextView
                    android:id="@+id/textView12"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="110dp" android:layout_marginStart="110dp"
                    android:layout_marginTop="55dp"
                    android:fontFamily="sans-serif-condensed-medium"
                    android:onClick="instaRedirect"
                    android:text="@string/instagram"

                    android:textSize="20sp"
                    tools:ignore="TouchTargetSizeCheck" />

                <TextView
                    android:id="@+id/textView11"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="110dp" android:layout_marginStart="110dp"
                    android:layout_marginTop="165dp"
                    android:fontFamily="sans-serif-condensed-medium"
                    android:onClick="gitRedirect"
                    android:text="@string/git"
                    android:textSize="20sp"
                    tools:ignore="TouchTargetSizeCheck" />

                <TextView
                    android:id="@+id/textView10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="110dp" android:layout_marginStart="110dp"
                    android:layout_marginTop="4dp"
                    android:fontFamily="sans-serif-condensed-medium"
                    android:onClick="donateMe"
                    android:text="@string/donate"
                    android:textSize="20sp"
                    tools:ignore="TouchTargetSizeCheck" />

                <TextView
                    android:id="@+id/textView13"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="110dp" android:layout_marginStart="110dp"
                    android:layout_marginTop="110dp"
                    android:fontFamily="sans-serif-condensed-medium"
                    android:onClick="faceRedirect"
                    android:text="@string/facebook"
                    android:textSize="20sp"
                    tools:ignore="TouchTargetSizeCheck" />

                <ImageView
                    android:id="@+id/imageButton8"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="0dp"
                    android:background="#6DFFFFFF"
                    android:contentDescription="@string/donate"
                    android:onClick="donateMe"
                    android:scaleType="centerInside"
                    app:srcCompat="@drawable/donate.png"
                    tools:ignore="TouchTargetSizeCheck,DuplicateSpeakableTextCheck" />

                <ImageButton
                    android:id="@+id/imageButton5"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginLeft="20dp" android:layout_marginStart="20dp"
                    android:layout_marginTop="110dp"
                    android:background="#00FFFFFF"
                    android:contentDescription="@string/facebook"
                    android:onClick="faceRedirect"
                    android:scaleType="centerInside"
                    app:srcCompat="@drawable/facebook.png"
                    tools:ignore="UsingOnClickInXml,TouchTargetSizeCheck" />

                <ImageButton
                    android:id="@+id/imageButton6"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="55dp"
                    android:background="#00FFFFFF"
                    android:contentDescription="@string/instagram"
                    android:onClick="instaRedirect"
                    android:scaleType="centerInside"
                    app:srcCompat="@drawable/instagram.png"
                    tools:ignore="UsingOnClickInXml,TouchTargetSizeCheck,DuplicateSpeakableTextCheck" />

                <ImageButton
                    android:id="@+id/imageButton7"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="160dp"
                    android:background="#00FFFFFF"
                    android:contentDescription="@string/git"
                    android:onClick="gitRedirect"
                    android:scaleType="centerInside"
                    app:srcCompat="@drawable/git.png"
                    tools:ignore="UsingOnClickInXml,TouchTargetSizeCheck,DuplicateSpeakableTextCheck" />
            </FrameLayout>-->

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">


            </androidx.recyclerview.widget.RecyclerView>


        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>